--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "expo": "^27.0.2",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
+    "react-native-fs": "^2.9.12"
   },
   "devDependencies": {}
 }
