--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "expo": "^27.0.2",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
-    "react-native-fs": "^2.9.12"
+    "react-native-fs": "^2.9.12",
+    "react-native-share": "^1.0.27"
   },
   "devDependencies": {}
 }
