--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "laxness-react",
-    "description": "This project is really great.",
+    "name": "Orð Skáldsins",
+    "description": "Orð Skáldsins: Tilvitnun dagsins eftir Halldór Laxness",
     "slug": "laxness-react",
     "privacy": "public",
     "sdkVersion": "27.0.0",
@@ -21,7 +21,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.gljufrasteinn.ordskaldsins"
+    },
+    "android": {
+      "package": "com.gljufrasteinn.ordskaldsins"
     }
   }
 }
