change vc from str to int

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     },
     "android": {
       "package": "com.gljufrasteinn.ordskaldsins",
-      "versionCode": "2"
+      "versionCode": 2
     }
   }
 }
